crates/native/tests/snapshots/parser_tests__complete_schema.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"type Query { user(id: ID!): User users: [User!]! } type User { id: ID! name: String! email: String! }\")"
---
Document {
    source: Source {
        code: "type Query { user(id: ID!): User users: [User!]! } type User { id: ID! name: String! email: String! }",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "Query",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "user",
                                    ),
                                ),
                                arguments: [
                                    InputValueDefinition {
                                        description: None,
                                        name: ArgumentName(
                                            Name(
                                                "id",
                                            ),
                                        ),
                                        typ: NonNull(
                                            Named(
                                                NamedType {
                                                    name: TypeName(
                                                        Name(
                                                            "ID",
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                        default_value: None,
                                        directives: [],
                                    },
                                ],
                                typ: Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "User",
                                            ),
                                        ),
                                    },
                                ),
                                directives: [],
                            },
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "users",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    List(
                                        NonNull(
                                            Named(
                                                NamedType {
                                                    name: TypeName(
                                                        Name(
                                                            "User",
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
        TypeSystem(
            Type(
                Object(
                    ObjectTypeDefinition {
                        description: None,
                        name: TypeName(
                            Name(
                                "User",
                            ),
                        ),
                        implements: [],
                        directives: [],
                        fields: [
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "id",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "ID",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "name",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "String",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                            FieldDefinition {
                                description: None,
                                name: FieldName(
                                    Name(
                                        "email",
                                    ),
                                ),
                                arguments: [],
                                typ: NonNull(
                                    Named(
                                        NamedType {
                                            name: TypeName(
                                                Name(
                                                    "String",
                                                ),
                                            ),
                                        },
                                    ),
                                ),
                                directives: [],
                            },
                        ],
                    },
                ),
            ),
        ),
    ],
}
