crates/native/tests/snapshots/parser_tests__directive_definition.snap
---
source: crates/native/tests/parser_tests.rs
expression: "parse!(\"directive @auth(requires: Role!) on FIELD_DEFINITION\")"
---
Document {
    source: Source {
        code: "directive @auth(requires: Role!) on FIELD_DEFINITION",
        file_path: "test.graphql",
        start_line: 1,
    },
    definitions: [
        TypeSystem(
            Directive(
                DirectiveDefinition {
                    description: None,
                    name: DirectiveName(
                        Name(
                            "auth",
                        ),
                    ),
                    arguments: [
                        InputValueDefinition {
                            description: None,
                            name: ArgumentName(
                                Name(
                                    "requires",
                                ),
                            ),
                            typ: NonNull(
                                Named(
                                    NamedType {
                                        name: TypeName(
                                            Name(
                                                "Role",
                                            ),
                                        ),
                                    },
                                ),
                            ),
                            default_value: None,
                            directives: [],
                        },
                    ],
                    repeatable: false,
                    locations: [
                        FieldDefinition,
                    ],
                },
            ),
        ),
    ],
}
